plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//CONTROLLER_VALIDATION
	implementation 'org.hibernate.validator:hibernate-validator'
	implementation 'javax.validation:validation-api:2.0.1.Final'

	//MYSQL DRIVER
	runtimeOnly 'com.mysql:mysql-connector-j'

	//DATASOURCE
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'

	//JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	//FILE UPLOAD
	implementation 'commons-fileupload:commons-fileupload:1.5'

	//MULTIPARTCONFIG
	implementation group: 'commons-io', name: 'commons-io', version: '2.15.1'

	// REST
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
	implementation 'com.google.code.gson:gson'
	implementation 'com.googlecode.json-simple:json-simple:1.1.1'

	// TMDB 파싱용
	implementation 'org.json:json:20240303'
}


tasks.named('test') {
	useJUnitPlatform()
}



